# Embersim

./: .gitignore  CMakeLists.txt  Embersim.cpp  Embersim.h  README.md  files.cpp  gnuplot-iostream.h  interface.cpp  models.cpp
data/: aerodynamics.csv  asc_pattern.csv  test02.csv
